# gans_sampling

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README  README.md  environment.yml  log.txt  mh.py  pyproject.toml  requirements.txt  setup.py
25_gaussians/: evol.npz  mh_2d.py  mh_mode_std.npy  models.py  train.py
configs/: 25_gaussians.yaml  2_gaussians.yaml  2_gaussians_isotr.yaml  2_gaussians_isotr_scaling.yaml  3_gaussians.yaml  3_gaussians_slices.yaml  bayesian_log_reg.yaml  complex_geom.yaml  gan_gaussians_2d.yaml  gan_gaussians_2d_multistart.yaml  gan_gaussians_5d.yaml  gaussians_2d.yaml  gaussians_5d.yaml  one_gaussian.yaml  phi_four.yaml  swissroll.yaml  swissroll_multistart.yaml
experiments/: 25_gaussians.py  bayesian_lr.py  complex_geometry.py  gan_gaussians_2d.py  gan_gaussians_5d.py  gaussians_2d.py  ill_cond_gaussian.py  one_gaussian.py  phi_four.py  readme.md  swissroll.py  three_gaussians.py  three_gaussians2d.py  two_gaussians.py  utils.py
experiments_reproduce/: ula_cifar_tempering.py
gaussians_tools/: .gan_train.py.swp  gan_train.py  paths.py  train_25gaussians.py  utils.py
mhgan_exps/: div_metrics.npz  h_q_r.npy  jsd.npy  mh_2d.py  mh_h_q_r.npy  mh_jsd.npy  mh_samples.npz  mode_std.npy  models.py  run_train.py  train.py  utils.py
models_25gaussians/: 2020_12_29-21_13_02_discriminator.pth  2020_12_29-21_13_02_generator.pth
notebooks/: 2d_ring_ula.ipynb  Bayesian_Logistic_Regression.ipynb  Cifar10.ipynb  Cifar10_reimplement.ipynb  Funnel_w_flows.ipynb  Gaussians.ipynb  Gaussins.ipynb  MHGAN_gaussians.ipynb  (+27 more)
(+144 files in other folders)
